@@ -31,10 +31,11 @@ from pycvsanaly2.Config import Config
 from pycvsanaly2.utils import printdbg, printerr, printout, remove_directory
 from pycvsanaly2.FindProgram import find_program
 from pycvsanaly2.profile import profiler_start, profiler_stop
-from pycvsanaly2.Command import Command, CommandError, CommandRunningError, CommandTimeOut
+from pycvsanaly2.Command import Command, CommandError, CommandRunningError
 from tempfile import mkdtemp
 from FilePaths import FilePaths
 from xml.sax import handler as xmlhandler, make_parser
+from signal import SIGTERM
 import os
 import re
 
@@ -213,7 +214,18 @@ class FileMetricsC (FileMetrics):
         
         # Running kdsi
         cmd = Command ([kdsi, self.path])
-        outputtext = cmd.run_sync ()
+        try:
+            outputtext = cmd.run_sync ()
+        except CommandError, e:
+            if e.error:
+                printerr ('Error running kdsi: %s', (e.error,))
+            raise e
+        except CommandRunningError, e:
+            pid = cmd.get_pid ()
+            if pid:
+                os.kill (pid, SIGTERM)
+            printerr ('Error running kdsi: %s', (e.error,))
+            raise e
         # Get rid of all the spaces and get a list
         output_values = [x for x in outputtext.split (' ') if '' != x]
         # sloc will be ignored, but it is also generated by the tool
@@ -228,7 +240,19 @@ class FileMetricsC (FileMetrics):
         
         # Running halstead
         cmd = Command ([halstead, self.path])
-        outputtext = cmd.run_sync ()
+        try:
+            outputtext = cmd.run_sync ()
+        except CommandError, e:
+            if e.error:
+                printerr ('Error running halstead: %s', (e.error,))
+            raise e
+        except CommandRunningError, e:
+            pid = cmd.get_pid ()
+            if pid:
+                os.kill (pid, SIGTERM)
+            printerr ('Error running halstead: %s', (e.error,))
+            raise e
+        
         values = outputtext.split ('\t')
 
         filename = values[0]
@@ -262,7 +286,19 @@ class FileMetricsC (FileMetrics):
         # Running mccabe
         cmd = Command ([mccabe, '-n', self.path])
         # The output of this tool is multiline (one line per function)
-        outputlines = cmd.run_sync ().split ('\n')
+        try:
+            outputlines = cmd.run_sync ().split ('\n')
+        except CommandError, e:
+            if e.error:
+                printerr ('Error running mccabe: %s', (e.error,))
+            raise e
+        except CommandRunningError, e:
+            pid = cmd.get_pid ()
+            if pid:
+                os.kill (pid, SIGTERM)
+            printerr ('Error running mccabe: %s', (e.error,))
+            raise e
+        
         mccabe_values = []
         nfunctions = 0
         mccabe_sum = mccabe_min = mccabe_max = mccabe_mean = mccabe_median = None
@@ -311,7 +347,19 @@ class FileMetricsPython (FileMetrics):
         self.__ensure_pymetrics ()
 
         cmd = Command ([self.pymetrics, '-C', '-S', '-i', 'simple:SimpleMetric', self.path])
-        outputlines = cmd.run_sync ().split ('\n')
+        try:
+            outputlines = cmd.run_sync ().split ('\n')
+        except CommandError, e:
+            if e.error:
+                printerr ('Error running pymetrics: %s', (e.error,))
+            raise e
+        except CommandRunningError, e:
+            pid = cmd.get_pid ()
+            if pid:
+                os.kill (pid, SIGTERM)
+            printerr ('Error running pymetrics: %s', (e.error,))
+            raise e
+        
         comment_number = comment_lines = blank_lines = None
         for line in outputlines:
             m = self.patterns['numComments'].match (line)
@@ -325,7 +373,19 @@ class FileMetricsPython (FileMetrics):
         self.__ensure_pymetrics ()
 
         cmd = Command ([self.pymetrics, '-C', '-S', '-B', '-i', 'mccabe:McCabeMetric', self.path])
-        outputlines = cmd.run_sync ().split ('\n')
+        try:
+            outputlines = cmd.run_sync ().split ('\n')
+        except CommandError, e:
+            if e.error:
+                printerr ('Error running pymetrics: %s', (e.error,))
+            raise e
+        except CommandRunningError, e:
+            pid = cmd.get_pid ()
+            if pid:
+                os.kill (pid, SIGTERM)
+            printerr ('Error running pymetrics: %s', (e.error,))
+            raise e
+        
         mccabe_values = []
         nfunctions = 0
         mccabe_sum = mccabe_min = mccabe_max = mccabe_mean = mccabe_median = None
@@ -393,7 +453,20 @@ class FileMetricsCCCC (FileMetrics):
 
         command = [cccc, '--outdir=%s' % tmpdir, '--lang=%s' % self.cccc_lang, self.path]
         cmd = Command (command)
-        cmd.run_sync ()
+        try:
+            cmd.run_sync ()
+        except CommandError, e:
+            if e.error:
+                printerr ('Error running cccc: %s', (e.error,))
+            remove_directory (tmpdir)
+            raise e
+        except CommandRunningError, e:
+            pid = cmd.get_pid ()
+            if pid:
+                os.kill (pid, SIGTERM)
+            printerr ('Error running cccc: %s', (e.error,))
+            remove_directory (tmpdir)
+            raise e
 
         self.handler = FileMetricsCCCC.XMLMetricsHandler ()
         fd = open (os.path.join (tmpdir, 'cccc.xml'), 'r')
@@ -450,7 +523,18 @@ def create_file_metrics (path):
     sloccount = find_program ('sloccount')
     if sloccount is not None:
         cmd = Command ([sloccount, '--wide', '--details', path])
-        outputlines = cmd.run_sync ().split ('\n')
+        try:
+            outputlines = cmd.run_sync ().split ('\n')
+        except CommandError, e:
+            if e.error:
+                printerr ('Error running sloccount: %s', (e.error,))
+            raise e
+        except CommandRunningError, e:
+            pid = cmd.get_pid ()
+            if pid:
+                os.kill (pid, SIGTERM)
+            printerr ('Error running sloccount: %s', (e.error,))
+            raise e
 
         for l in outputlines:
             # If there is not 'top_dir', then ignore line
@@ -710,7 +794,7 @@ class Metrics (Extension):
             except ProgramNotFound, e:
                 printout ('Program %s is not installed. Skipping halstead metric', (e.program, ))
             except Exception, e:
-                printerr ('Error running cmetrics halstead for %s@%s. Exception: %s', (checkout_path, rev, str (e)))
+                printerr ('Error running HalsteadComplexity for %s@%s. Exception: %s', (checkout_path, rev, str (e)))
             profiler_stop ("[HalsteadComplexity] Measuring %s @ %s", (checkout_path, rev))
                 
             profiler_start ("[MccabeComplexity] Measuring %s @ %s", (checkout_path, rev))
@@ -723,7 +807,7 @@ class Metrics (Extension):
             except ProgramNotFound, e:
                 printout ('Program %s is not installed. Skipping mccabe metric', (e.program, ))
             except Exception, e:
-                printerr ('Error running cmetrics mccabe for %s@%s. Exception: %s', (checkout_path, rev, str(e)))
+                printerr ('Error running MccabeComplexity for %s@%s. Exception: %s', (checkout_path, rev, str(e)))
             profiler_stop ("[MccabeComplexity] Measuring %s @ %s", (checkout_path, rev))
 
             self.metrics.append ((id_counter, file_id, commit_id, measures.lang, measures.sloc, measures.loc,
